--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/curriculum.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/curriculum.scss
@@ -173,10 +173,12 @@ body {
 }
 
 .group_breadcumbs {
-    color: #fff;
-    display: block;
-    margin: 15px auto;
-    letter-spacing: 1px;
+    a {
+        color: #fff;
+        display: block;
+        margin: 15px auto;
+        letter-spacing: 1px;
+    }
 }
 
 ul.horizontal_tabs_gstudio {
