--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/breadcrumb.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/breadcrumb.html
@@ -5,14 +5,16 @@
 
 {% if path and not site_name == 'NROER' %}
 <div class="group_breadcumbs row">
+    <div class="small-12 columns">
     {% for each_br in path %}
-        <div class="small-12 columns row">
-			{% if forloop.last %}
-	            <span><b><a href="#"> {{each_br.name}} </a></b></span>&nbsp;&gt;&nbsp;&nbsp;
-        	{% else %}
-	            <span><a href="{{each_br.link}}"> {{each_br.name}} </a></span> &nbsp;&gt;
-        	{% endif %}
-        </div>
+
+	{% if forloop.last %}
+	      <span><b><a href="#"> {{each_br.name}} </a></b></span>&nbsp;&gt;&nbsp;&nbsp;
+        {% else %}
+	      <span><a href="{{each_br.link}}"> {{each_br.name}} </a></span> &nbsp;&gt;
+        {% endif %}
+
     {% endfor %}
+    </div>
 </div>
 {% endif %}
