--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
@@ -21,6 +21,7 @@
     <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation.min.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation/foundation.accordion.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/modernizr/modernizr.js"></script>
+    <script src="/static/ndf/js/app.js"></script>
     
     <title>{{ site.SITE_NAME }} - {% block title %} {% endblock %}</title>
     {% block head %}{% endblock %}
@@ -37,6 +38,7 @@
     {% block extended_header %}{% endblock %}
     
     {% block body_content %} {% endblock %}
-             
+
+  <!-- JS -->
 </body>
 </html>
