--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gevent_base.html
@@ -61,37 +61,8 @@
                     <div id="group_pages">
                     </div>
                     <div id="group_elibrary">
-                        {% if title == "raw material" %}
-                        <div class="elibrary-actions">
-                            <button type="button" class="orange-button">
-                                <i class="fi-filter"> </i>
-                                Filter
-                            </button>
-                            <button type="button" class="right orange-button createAsset">
-                                <i class="fi-plus"> </i>
-                                Add Asset
-                            </button>
-                        </div>
-                        <div class="row">
-                            <div class="small-12 medium-6 large-3 columns">
-                                <div class="asset_tile">
-                                    <div class="asset_preview"></div>
-                                    <div class="asset_text">
-                                        <div class="asset_title">Asset Title</div>
-                                        <div class="asset_desc">This is a long description</div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="small-12 medium-6 large-3 columns">
-                                <div class="asset_tile">
-                                    <div class="asset_preview"></div>
-                                    <div class="asset_text">
-                                        <div class="asset_title">Asset Title</div>
-                                        <div class="asset_desc">This is a long description</div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
+                        {% if title == "assets" %}
+                            {% include "ndf/assets.html" %}
                         {% endif %}
                     </div>
                     <div id="addAsset" class="reveal-modal" data-reveal aria-labelledby="modalTitle" aria-hidden="true" role="dialog">
