--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/assets.html
@@ -15,7 +15,7 @@
             <div class="asset_preview"></div>
             <div class="asset_text">
                 <div class="asset_title">{{each.name}}</div>
-                <div class="asset_desc"></div>
+                <div class="asset_desc">{{each.content|truncatechars:20}}</div>
             </div>
         </div>
     </div>
