--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/course_about.html
@@ -76,7 +76,7 @@
   <div class="course-overview-container">
     <div class="row collapse course-overview">
       <div class="columns small-12 medium-12">
-      {% comment %}
+        {% comment %}
         <div class="ongoing-session">
           <h5>ONGOING SESSION </h5>
           <h3>Taking Screenshots of the work and doing something</h3>
@@ -101,23 +101,23 @@
 
           </ul>
           <div class="tabs-content">
-            <section role="tabpanel" aria-hidden="false" class="content active" id="course-notification">
+            <section role="tabpanel" aria-hidden="true" class="content active" id="course-notification">
             </section>
             <section role="tabpanel" aria-hidden="false" class="content active" id="analytics-content">
               {% if gstaff_access %}
                 <div class="group-analytics hide">
                   <div class="row course-students-data">
-                    <div class="small-12 medium-4 columns">
+                    <div class="small-12 medium-2 columns">
                       Points table for students
                     </div>
-                    <div class="small-12 medium-8 columns students-table-legends">
-                      <span class=" badge green">&nbsp;</span>
+                    <div class="small-12 medium-10 columns students-table-legends">
+                      <span class=" badge_ex green">&nbsp;</span>
                       <span>Gallery uploads</span>
-                      <span class=" badge">&nbsp;</span>
+                      <span class=" badge_ex">&nbsp;</span>
                       <span>Note Making</span>
-                      <span class=" badge red">&nbsp;</span>
+                      <span class=" badge_ex red">&nbsp;</span>
                       <span>Quiz Performance</span>
-                      <span class=" badge yellow">&nbsp;</span>
+                      <span class=" badge_ex yellow">&nbsp;</span>
                       <span>Interactions</span>
                     </div>
                   </div>
