--- a/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/static/ndf/scss/_clix2017.scss
@@ -6,6 +6,7 @@ $tertiary-blue : #719dc7;
 /*Orange color variables*/
 $primary-orange : #ce7869;
 $secondary-orange : #ffc14e;
+
 @mixin transition-prop($prop) {
     transition: $prop 1s ease;
     -webkit-transition: $prop 1s ease;
@@ -15,6 +16,7 @@ $secondary-orange : #ffc14e;
     transition: $prop1 1s ease, $prop2 1s ease;
     -webkit-transition: $prop1 1s ease, $prop2 1s ease;
 }
+
 
 html {
     height: 100%;
@@ -1291,4 +1293,549 @@ ul.jqtree-tree .jqtree-toggler {
   background-image: -moz-linear-gradient(top, #fc9f8a, #fa623f);
   background-image: -o-linear-gradient(top, #fc9f8a, #fa623f);
   background-image: linear-gradient(to bottom, #fc9f8a, #fa623f);
+}
+
+/* Create_Unit styles */
+
+.course_creator_header {
+    width: 100%;
+    height: 60px;
+    background: #fff;
+    padding: 5px 15px;
+    box-shadow: 1px 0px 13px #000;
+
+    .back_to_group {
+        padding: 0px 15px 0px 10px;
+        border-right: 1px solid #ccc;
+        margin-right: 15px;
+    }
+
+    .course_heading {
+        input {
+            width: 500px;
+            height: 50px;
+            border: 0px solid $secondry-blue;
+            box-shadow: none;
+
+            &:focus {
+                border: 1px solid $secondry-blue;
+            }
+
+            &::-webkit-input-placeholder
+            /*&::-moz-placeholder,
+            &:-ms-input-placeholder,
+            &:-moz-placeholder*/ {
+                color: #d9dfe4;
+                font-size: 20px;
+                letter-spacing: 0.8px;
+            }
+        }
+    }
+
+    .course_heading span{
+        letter-spacing: 0.9px;
+        font-weight: 600;
+        line-height: 50px;
+        font-size: 25px;
+    }
+
+    .course_actions {
+        ul{
+            margin: 0px;
+        }
+        ul li {
+            list-style-type: none;
+            display: inline-block;
+            padding: 12px;
+            color: #7ca0d0;
+            cursor: pointer;
+            font-size: 18px;
+            letter-spacing: 0.8px;
+
+            &.active, &:hover {
+                border-bottom: 3px solid $secondary-orange;
+            }
+        }
+
+    }
+}
+
+.create_unit {
+    background: #fff;
+    box-shadow: 0px 2px 6px #000;
+    margin: 20px auto;
+    padding: 10px;
+    height: calc(100vh - 100px);
+}
+
+.button-hollow-black{
+    background: #fff;
+    border: 2px solid $primary-blue;
+    border-radius: 5px;
+    color: $primary-blue;
+    font-weight: 600;
+    letter-spacing: 0.9px;
+    padding: 2px 10px;
+}
+
+.vertically-center {
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+/* Unit_Structure styles */
+
+
+.course_creator {
+    background: #fff;
+    box-shadow: 0px 2px 6px #000;
+    margin: 0px auto;
+    padding: 0px 0px;
+    max-width: 100vw;
+    // min-height: calc(100vh - 100px);
+
+    &>.columns {
+        padding: 0px;
+        height: 100%;
+    }
+    .course_editor {
+        height: 80vh;
+        position: relative;
+
+        /*Overriding default*/
+        .accordion .accordion-navigation > .content, .accordion dd > .content {
+            padding: 0px;
+        }
+
+        /*Custom css*/
+        >div {
+            display: inline-block;
+            vertical-align: top;
+            // height: calc(100vh - 120px);
+        }
+        .course_tree {
+            @include transition-prop(all);
+            width: 100%;
+            background-color: #fff;
+            max-height: 100%;
+            overflow-y: auto;
+            height: inherit;
+
+            .course-lessons {
+                dd {
+                    border-bottom: 2px solid #9abfd9;
+                    @include transition-prop(border-color);
+
+                    &.accordion-navigation {
+                        position: relative;
+
+                        &>a {
+                            padding-left: 50px;
+                            &:before {
+                                content: '&#8250';
+                                position: absolute;
+                                left: 23px;
+                                font-size: 45px;
+                                line-height: 20px;
+                                color: $secondry-blue;
+                            }
+                        }
+                        a.entity-title {
+                            background: inherit;
+                            cursor: pointer;
+                            font-weight: 600;
+                            color: #3c5267;
+                            @include transition-prop(color);
+
+                            .edit_entity {
+                                color: #c9d1d8;
+                                font-weight: 400;
+                                letter-spacing: 0.5px;
+                                font-size: 14px;
+                                display: block;
+                                position: relative;
+                                display: none;
+
+                                i {
+                                    display: none;
+                                    font-size: 20px;
+                                }
+
+                                >.entity_actions {
+                                    margin-bottom: 0px;
+
+                                    li {
+                                        white-space: nowrap;
+                                        list-style: none;
+                                        display: inline-block;
+                                        margin: 0px 10px;
+                                        cursor: pointer;
+                                    }
+                                }
+                            }
+                            &:hover {
+                                .edit_entity {
+                                    display: block;
+                                }
+                            }
+                        }
+
+                        &.active >a:before {
+                            content: ''; //arrow facing down
+                            font-size: 45px;
+                            line-height: 55px;
+                            color: #d7d7d7;
+                        }
+
+                        .course-activities {
+                            margin: 0px;
+                            &>li {
+                                list-style: none;
+                                border-top: 1px solid #e9e9e9;
+                                padding: 10px 0px 10px 90px;
+                                background: inherit;
+                                @include transition-prop(border-color);
+
+                                &>a {
+                                    color: #7ca0d0;
+                                    width: 100%;
+                                    display: block;
+                                    @include transition-prop(color);
+                                }
+                            }
+                        }
+
+                        .content {
+                            background: inherit;
+                        }
+
+                    }
+                }
+            }
+        }
+
+        .course-editor-section {
+            width: 0%;
+            display: inline-block;
+            opacity: 0;
+            @include transition-prop(width);
+            height: inherit;
+            max-height: 100%;
+            overflow-y: auto;
+
+            .editor-header{
+                height: 100px;
+                background-color: #e5f1f6;
+                border-bottom: 1px solid #e6e6e7;
+
+                .header-left {
+                    padding: 29px 0px;
+
+                    >span {
+                        color: #3c5264;
+                        font-weight: 600;
+                        font-size: 20px;
+                        font-size: 28px;
+                        margin-right: 10px;
+                    }
+                }
+
+                .custom_dropdown {
+                    margin: 40px 35px 0px;
+                }
+            }
+            .editor-tool {
+                .editor_actions {
+                    background-color: #fff;
+                    border-bottom: 1px solid #ccc;
+                    height: 55px;
+                    ul {
+                        margin: 0px;
+                        li {
+                            list-style: none;
+                            display: inline-block;
+                            &:not(:first-child) {
+                                padding: 1px 30px;
+                                border-left: 1px solid #ccc;
+                                text-align: center;
+                            }
+
+                            span {
+                                display: inline-block;
+                                font-size: 14px;
+                                letter-spacing: 0.5px;
+                                color: #999;
+                                padding: 15px 5px;
+                                cursor: pointer;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+
+
+        .add-lesson {
+            margin: 10px 50px;
+        }
+
+/* Course edit in the edit mode. */
+        &.edit_mode {
+            button {
+                color: #5097b5;
+                border-color: #5097b5;
+                @include transition-two-prop(color, border-color);
+            }
+            .course_tree {
+                @include transition-prop(all);
+                width: 20%;
+                background-color: #2a6882;
+
+                .course-lessons {
+                    dd {
+                        border-color: #295566;
+                        @include transition-prop(border-color);
+
+                        &.accordion-navigation {
+                            a {
+                                background: inherit;
+                                color: #8fbbd8;
+                                @include transition-prop(color);
+
+                                .edit_entity {
+                                    width: 20px;
+                                    i {
+                                        display: block;
+                                    }
+
+                                    >.entity_actions {
+                                        display: none;
+                                        position: absolute;
+                                        top: 22px;
+                                        right: -20px;
+                                        margin: 0px 10px;
+                                        z-index: 100;
+                                        background: #fff;
+                                        color: #999999;
+                                        border-radius: 3px;
+
+                                        li {
+                                            display: block;
+                                            margin: 0px;
+                                            padding: 5px 25px;
+
+                                            &:hover {
+                                                background-color: #d5f2ff;
+                                            }
+                                        }
+                                    }
+
+                                    &:hover>.entity_actions {
+                                        display: block;
+                                    }
+                                }
+                            }
+                            .course-activities {
+                                &>li {
+                                    @include transition-prop(border-color);
+                                    padding-right: 20px;
+                                    border-color: #295566;
+                                    border-bottom: 1px solid transparent;
+
+                                    &:not(:last-child) {
+                                        &:hover,&.active {
+                                            border-width: 1px 0px 1px 0px;
+                                            border-style: solid;
+                                            border-color:  #50c0f8;
+                                        }
+                                    }
+
+                                    &>a {
+                                        color: #edf6ff;
+                                        @include transition-prop(color);
+                                    }
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+
+            .course-editor-section {
+                width: 79.5%;
+                opacity: 1;
+                overflow-x: auto;
+                //display: inline-block;
+                transition: width 1.9s ease, opacity 4s ease;
+                -webkit-transition: width 1.9s ease, opacity 4s ease;
+            }
+        }
+    }
+
+}
+
+.tile_modal {
+    .editor_modal_content {
+        .modal_tile {
+            .th {
+                width: 100%;
+                height: 210px;
+                box-shadow: none;
+
+                &>img {
+                    height: 180px;
+                    width: 100%;
+                }
+
+                &>span {
+                    display: block;
+                    width: 100%;
+                    text-align: center;
+                    line-height: 22px;
+                }
+            }
+        }
+    }
+}
+
+
+#appModal {
+    .editor_modal_content {
+        &>div {
+            width: 100%;
+            &>div {
+                display: inline-block;
+                vertical-align: top;
+            }
+        }
+        .app_row {
+            margin-bottom: 39px;
+
+            .app_image {
+                padding: 10px;
+
+                &>div {
+                    border: 1px solid #999;
+                    height: 222px;
+                }
+            }
+
+            .app_desc {
+                padding-left: 10px;
+            }
+        }
+    }
+}
+
+
+.editor_modal {
+    .editor_modal_title {
+        font-size: 20px;
+        color: #3c5264;
+    }
+    .editor_modal_actions {
+        &>a {
+            display: inline-block;
+
+            &.close-reveal-modal {
+                font-size: small;
+                line-height: inherit;
+                position: inherit;
+                color: #c601bc;
+            }
+        }
+    }
+}
+
+
+.custom_dropdown {
+    font-size: 15px;
+    position: relative;
+    z-index: 10;
+    display: inline-block;
+
+    &>a {
+        height: 30px;
+        display: block;
+    }
+
+    &:hover {
+        .dropdown_content {
+            display: block;
+        }
+    }
+
+    .dropdown_content {
+        background-color: #fff;
+        border-radius: 3px;
+        display: none;
+        position: absolute;
+        top: 30px;
+        border: 1px solid #ccc;
+
+        &.left_align {
+            left: -10px;
+        }
+
+        &.right_align {
+            right: -10px;
+        }
+
+        li {
+            padding: 5px 25px;
+            list-style: none;
+            white-space: nowrap;
+
+            a {
+                margin: 0px;
+            }
+
+            &:hover {
+                background-color: #d5f2ff;
+            }
+        }
+
+    }
+
+    a {
+        color: #999999;
+        margin-left: 25px;
+    }
+}
+
+.button-hollow-purple {
+    background: inherit;
+    border: 2px solid #c601bc;
+    border-radius: 5px;
+    color: #c601bc;
+    font-weight: 600;
+    letter-spacing: 0.9px;
+    padding: 3px 10px;
+    font-size: 13px;
+    cursor: pointer;
+    @include transition-two-prop(color, border-color);
+}
+
+.button-hollow-grey {
+    background: inherit;
+    border: 2px solid #c9d1d8;
+    border-radius: 5px;
+    color: #c9d1d8;
+    font-weight: 600;
+    letter-spacing: 0.9px;
+    padding: 3px 10px;
+    font-size: 13px;
+    cursor: pointer;
+    @include transition-two-prop(color, border-color);
+}
+
+.button-hollow-blue{
+    background: inherit;
+    border: 2px solid #5097b5;
+    border-radius: 5px;
+    color: #5097b5;
+    font-weight: 600;
+    letter-spacing: 0.9px;
+    padding: 2px 10px;
+    @include transition-two-prop(color, border-color);
 }
