Renamed the create_unit & unit_structure and add rubik-font.css

--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
@@ -18,7 +18,7 @@
 
     <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/foundation/css/normalize.css">
     <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/foundation-icon-fonts/foundation-icons.css">
-    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" rel="stylesheet">
+    <link rel="stylesheet" type="text/css" href="/static/ndf/css/rubik-fonts.css">
     <link rel="stylesheet" type="text/css" href="/static/ndf/bower_components/foundation/css/foundation.css">
     <link rel="shortcut icon" href="{{site.FAVICON}}">
     <link rel="stylesheet" href="/static/ndf/bower_components/foundation/css/normalize.css">
