--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/create_unit.html
@@ -1,19 +1,7 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>GStudio - Course Creator - 1</title>
-    <link rel="stylesheet" type="text/css" href="bower_components/foundation/css/foundation.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/foundation/css/normalize.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/foundation-icon-fonts/foundation-icons.css">
-    <link rel="stylesheet" type="text/css" href="css/course-creator-1.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/jqtree/jqtree.css">
-    <link href="https://fonts.googleapis.com/css?family=Rubik:300,400,500,700,900" rel="stylesheet">
-    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="bower_components/foundation/js/foundation.min.js"></script>
-    <script type="text/javascript" src="bower_components/modernizr/modernizr.js"></script>
-    <script type="text/javascript" src="bower_components/jqtree/tree.jquery.js"></script>
-</head>
-<body>
+{% extends "ndf/gbase.html" %}
+
+{% block title %}GStudio - Course Creator - 1{% endblock %}
+{% block body_content %}
     <div class="course_creator_header">
         <div class="left course_heading">
             <input type="text" placeholder="Enter unit name" />
@@ -38,5 +26,4 @@
             </div>
         </div>
     </div>
-</body>
-</html>
+{% endblock %}
