--- a/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
+++ b/gnowsys-ndf/gnowsys_ndf/ndf/templates/ndf/gbase.html
@@ -2,10 +2,10 @@
 {% load i18n %}
 {% load cache %}
 
-{% get_group_name groupid as group_name_tag %}
+{% get_group_name group_id as group_name_tag %}
 {% get_site_variables as site %}
-{% get_oid_variables as oids %}
-{% user_access_policy groupid request.user as user_access %}
+{# {% get_oid_variables as oids %} #}
+{% user_access_policy group_id request.user as user_access %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -25,23 +25,21 @@
     <!--<link rel="stylesheet" href="/static/ndf/css/themes/{{site.SITE_NAME|lower}}/styles.css">-->
     <link rel="stylesheet" href="/static/ndf/bower_components/font-awesome/css/font-awesome.css">
     <link rel="stylesheet" href="/static/ndf/bower_components/font-awesome/css/font-awesome.min.css">
-    <!-- <link rel="stylesheet" href="/static/ndf/css/themes/clix/curriculum.css"> -->
     <link rel="stylesheet" type="text/css" href="/static/ndf/css/themes/clix/clix2017.css">
-    
-    
+
     <script type="text/javascript" src="/static/ndf/bower_components/jquery/dist/jquery.min.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation.min.js"></script>
-    <script type="text/javascript" src="/static/ndf/bower_components/modernizr/modernizr.js"></script>
     <script type="text/javascript" src="/static/ndf/bower_components/foundation/js/foundation/foundation.topbar.js">
+    <script type="text/javascript" src="/static/ndf/bower_components/modernizr/modernizr.js"></script>
     </script>
     <!-- Foundation 5 - Responsive CSS Framework http://foundation.zurb.com/docs/css.html-->
-    <script src="/static/ndf/js/MediaStreamRecorder.js"></script> 
+    <script src="/static/ndf/js/MediaStreamRecorder.js"></script>
     <script src="/static/ndf/js/adapter.js"></script>
     <script src="/static/ndf/bower_components/modernizr/modernizr.js"></script>
     <!-- jQuery -->
     <script src="/static/ndf/bower_components/jquery/dist/jquery.min.js"></script>
-    <script src="/static/ndf/bower_components/blockui/jquery.blockUI.js"></script> 
-    
+    <script src="/static/ndf/bower_components/blockui/jquery.blockUI.js"></script>
+
     <title>{{ site.SITE_NAME }} - {% block title %} {% endblock %}</title>
     {% block head %}{% endblock %}
 
@@ -55,87 +53,82 @@
 <body>
     {% include "ndf/header_clix.html" %}
     {% block extended_header %}{% endblock %}
-    
-    {% block body_content %} {% endblock %}
-             
 
- 
+    {% block body_content %} {% endblock %}
 
   <!-- JS -->
-  <script src="/static/ndf/bower_components/foundation/js/foundation.min.js"></script>
   <script src="/static/ndf/js/app.js"></script>
 
   <!-- end of footer cache -->
 
   <script type="text/javascript">
     // Initialize Foundation CSS
-      $(document).foundation();
+      // $(document).foundation();
 
     // Register global ajax start and complete events to show ajax loader when request is in process
       $(document).ajaxStart($.blockUI).ajaxStop($.unblockUI);
-      
 
-    // Toggles the display of main sidebar for 12 col article view
-      var toggleMainSidebar = function(){
-        $("main>aside").toggle();
-        $("main>article").toggleClass("large-9 large-12");
-      };
+    // // Toggles the display of main sidebar for 12 col article view
+    //   var toggleMainSidebar = function(){
+    //     $("main>aside").toggle();
+    //     $("main>article").toggleClass("large-9 large-12");
+    //   };
 
-    // Hide broken image links
-      $('img').error(function(){
-        $(this).addClass("hide");
-        //$(this).attr('src', 'missing.png');
-      });
+    // // Hide broken image links
+    //   $('img').error(function(){
+    //     $(this).addClass("hide");
+    //     //$(this).attr('src', 'missing.png');
+    //   });
 
-    // If on the home group, change group dropdown text to "Groups"
-      if($(".group a.active").html() == "home") {
-        $(".group a.active").html("Groups").removeClass("active");
-        $("#home-group").addClass("active");
-      }
+    // // If on the home group, change group dropdown text to "Groups"
+    //   if($(".group a.active").html() == "home") {
+    //     $(".group a.active").html("Groups").removeClass("active");
+    //     $("#home-group").addClass("active");
+    //   }
 
-    //Functions to automatically add an <i> element icon inside node spans
+    // //Functions to automatically add an <i> element icon inside node spans
 
-    /* Attaches user icon with gnow level color for every user link */
-    $(".user").prepend(function(){return "<i class='fi-torso'></i>"});
+    // /* Attaches user icon with gnow level color for every user link */
+    // $(".user").prepend(function(){return "<i class='fi-torso'></i>"});
 
-    /* Attaches icon for node type */
-    $(".card .course").prepend(function(){return "<i class='fi-book'></i>"});
+    // /* Attaches icon for node type */
+    // $(".card .course").prepend(function(){return "<i class='fi-book'></i>"});
 
-    /* Attaches icon for node type */
-    $(".card .quiz").prepend(function(){return "<i class='fi-graph-bar'></i>"});
+    // /* Attaches icon for node type */
+    // $(".card .quiz").prepend(function(){return "<i class='fi-graph-bar'></i>"});
 
-    /* Attaches icon for node type */
-    $(".card .forum").prepend(function(){return "<i class='fi-comments'></i>"});
+    // /* Attaches icon for node type */
+    // $(".card .forum").prepend(function(){return "<i class='fi-comments'></i>"});
 
-    /* Attaches icon for node type */
-    $(".card .group").prepend(function(){return "<i class='fi-torsos'></i>"});
+    // /* Attaches icon for node type */
+    // $(".card .group").prepend(function(){return "<i class='fi-torsos'></i>"});
 
-      /* Attaches icon for node type */
-    $(".card .page").prepend(function(){return "<i class='fi-page'></i>"});
+    //   /* Attaches icon for node type */
+    // $(".card .page").prepend(function(){return "<i class='fi-page'></i>"});
 
-    /* Attaches icon for node type */
-    $(".card .ebook").prepend(function(){return "<i class='fi-book'></i>"});
+    // /* Attaches icon for node type */
+    // $(".card .ebook").prepend(function(){return "<i class='fi-book'></i>"});
 
-    /* Attaches icon for node type */
-    $("aside.page").prepend(function(){return "<i class='fi-page'></i>"});
+    // /* Attaches icon for node type */
+    // $("aside.page").prepend(function(){return "<i class='fi-page'></i>"});
 
-    //set language prefernce
-      $(document).on('click', "#savepref", function(){
-        var vpref=$("#pref").val();
-        var fb=$("#fallback").val();
-        var vurl='/{{group_id}}/userpreference/';
+    // //set language prefernce
+    //   $(document).on('click', "#savepref", function(){
+    //     var vpref=$("#pref").val();
+    //     var fb=$("#fallback").val();
+    //     var vurl='/{{group_id}}/userpreference/';
 
-        $.ajax({
-          url: vurl,
-          type: 'POST',
-          data: {pref:vpref,fallback:fb,csrfmiddlewaretoken: '{{ csrf_token }}'},
+    //     $.ajax({
+    //       url: vurl,
+    //       type: 'POST',
+    //       data: {pref:vpref,fallback:fb,csrfmiddlewaretoken: '{{ csrf_token }}'},
 
-          success:function(data){
-            alert("Successfully set the preferences");
-            location.reload();
-          }
-        }); //ajax closes
-      }); //document closes
+    //       success:function(data){
+    //         alert("Successfully set the preferences");
+    //         location.reload();
+    //       }
+    //     }); //ajax closes
+    //   }); //document closes
 
       // after opening overlay node'sdescription should fetch from oid
       $('.overlay-description-by-oid-caller').click(function(){
@@ -158,42 +151,36 @@
 
       });
 
-    // start of document.ready()
-      $(document).ready(function() {
-        try{
-            $("#help-canvas-menu").click(function(){
-                $("#help-canvas-menu").toggleClass("expanded");
-                // $("div").addClass("expanded");
-            });
+    // // start of document.ready()
+    //   $(document).ready(function() {
+    //     try{
+    //         $("#help-canvas-menu").click(function(){
+    //             $("#help-canvas-menu").toggleClass("expanded");
+    //             // $("div").addClass("expanded");
+    //         });
 
-          // $('select option[value="{{request.LANGUAGE_CODE}}"]').attr("selected",true);
+    //       // $('select option[value="{{request.LANGUAGE_CODE}}"]').attr("selected",true);
 
-          {% block document_ready %} {% endblock %}
+    //       {% block document_ready %} {% endblock %}
 
-        }
-        finally{
-          // function defined in app.js to check the font and load it asynchronously.
-          checkOpenSansFont();
-        }
+    //     }
+    //     finally{
+    //       // function defined in app.js to check the font and load it asynchronously.
+    //       checkOpenSansFont();
+    //     }
 
-
-        //function defined to inject
-        (function(win,doc,tag,script){
-          var element = doc.createElement(tag);
-          var ftag = doc.getElementsByTagName(tag)[0];
-          element.async = 1;
-          element.src = script;
-          ftag.parentNode.insertBefore(element,ftag)
-        })(window,document,'script','/static/ndf/js/analytics.js');
-
-
-      });
+    //     //function defined to inject
+    //     (function(win,doc,tag,script){
+    //       var element = doc.createElement(tag);
+    //       var ftag = doc.getElementsByTagName(tag)[0];
+    //       element.async = 1;
+    //       element.src = script;
+    //       ftag.parentNode.insertBefore(element,ftag)
+    //     })(window,document,'script','/static/ndf/js/analytics.js');
+    //   });
 
     {% block script %} {% endblock %}
 
   </script>
-
-
-
 </body>
 </html>
